[package]
name = "erc20"
version = "0.1.0"
authors = ["Abdulazeez abdulazeezsalihu41@gmail.com"]
edition = "2021"

[dependencies]
ink = { version = "=4.0.0-rc", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

#[dev-dependencies]
#ink_e2e = { path = "../../crates/e2e" }

[profile.dev]
overflow-checks = false    

[profile.release]
overflow-checks = false

[lib]
name = "erc20"
path = "lib.rs"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std"]
ink-as-dependency = []
e2e-tests = []
